# -

./: DOCKER_GUIDE.md  Dockerfile  LICENSE  README.md  deploy.bat  docker-compose.yml  pyproject.toml
src/classroom_simulation/: crew.py  main.py
src/classroom_simulation/agents/: __init__.py  academic_director.py  content_auditor.py  leader_teacher.py  peer_teacher.py  student_agents.py
src/classroom_simulation/config/: agents.yaml  tasks.yaml
src/classroom_simulation/crews/: __init__.py
src/classroom_simulation/crews/class_demo_crew/: __init__.py  class_demo_crew.py
src/classroom_simulation/crews/class_demo_crew/config/: agents.yaml  tasks.yaml
src/classroom_simulation/crews/lesson_prep_crew/: __init__.py  lesson_prep_crew.py
src/classroom_simulation/crews/lesson_prep_crew/config/: agents.yaml  tasks.yaml
src/classroom_simulation/tools/: __init__.py  doc_converter.py  file_tools.py  search_tools.py  template_tools.py
src/classroom_simulation/utils/: __init__.py  errors.py  performance.py
tests/: test_integration.py  test_tools.py
