[project]
name = "classroom_simulation"
version = "0.1.0"
description = "classroom_simulation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4"
]

[project.scripts]
classroom_simulation = "classroom_simulation.main:run"
run_crew = "classroom_simulation.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
